# bio-curve-fit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  example.ipynb  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish-package-prod.yaml  publish-package-test.yaml  publish-package.yaml  python-package.yml  python-test.yaml
bio_curve_fit/: __init__.py  base.py  four_pl_logistic.py  logistic.py  plotting.py
examples/: example.ipynb
examples/five_pl_logistic/: five_pl_fit.ipynb
examples/four_pl_logistic/: four_pl_fit.ipynb  linear_range_detection.ipynb  standard_curve_data.csv
tests/: test_five_param_logistic.py  test_five_pl_logistic.py  test_four_param_logistic.py  test_four_pl_logistic.py  test_log_dose_three_param_logistic.py
