[tool.poetry]
name = "bio-curve-fit"
version = "0.2.2"
description = "Curve fitting algorithms for bio-assays with scikit-learn api"
authors = ["Luke Schiefelbein <luke@ganymede.bio>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bio_curve_fit"}]

[tool.poetry.dependencies]
python = ">=3.8.12"
scikit-learn = ">=1.2.2"
pandas = ">=1.5.3"
matplotlib = ">=3.7.1"
adjusttext = "^1.2.0"


[tool.poetry.group.dev.dependencies]
mypy = ">=1.7.0"
ipython = "8.12.2"
pytest = ">=7.4.3"
data-science-types = ">=0.2.23"
ruff = ">=0.1.5"
ipykernel = "^6.26.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["D", "N"]
ignore = ["N803", "N806"]
# You can specify particular rules or conventions as needed
per-file-ignores = { "tests/*"=["D"] }

# Numpydoc specific configuration
[tool.ruff.pydocstyle]
convention = "numpy"