[project]
name = "bio-curve-fit"
version = "1.1.1"
description = "Curve fitting algorithms for bio-assays with scikit-learn api"
authors = [
    {name = "Luke Schiefelbein", email = "luke@ganymede.bio"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["curve-fitting", "bio-assay", "scikit-learn", "data-science"]
requires-python = ">=3.8.12"
dependencies = [
    "scikit-learn>=1.2.2",
    "pandas>=1.5.3",
    "matplotlib>=3.7.1",
    "adjusttext>=1.2.0",
    "importlib-metadata>=6.0; python_version<'3.8'",
]

[project.urls]
Repository = "https://github.com/Ganymede-Bio/bio-curve-fit/"

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "ipython==8.12.2",
    "pytest>=7.4.3",
    "data-science-types>=0.2.23",
    "ruff>=0.1.5",
    "ipykernel>=6.26.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "coverage>=7.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["D", "N"]
ignore = ["N803", "N806", "N802"]
# You can specify particular rules or conventions as needed
per-file-ignores = { "tests/*"=["D"] }

# Numpydoc specific configuration
[tool.ruff.lint.pydocstyle]
convention = "numpy"